The start of text rendering

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Spencer Judge <sushisource@gmail.com>"]
 
 [dependencies]
 glium = "*"
+glium_text = "*"
 rand = "*"
 noise = "*"
 nalgebra = "*"
