--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Spencer Judge <sushisource@gmail.com>"]
 
 [dependencies]
 ggez = "0.4"
+nalgebra = "0.13.*"
 time = "0.1"
 rand = "*"
 geo = "*"
