--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Spencer Judge <sushisource@gmail.com>"]
 [dependencies]
 ggez = "0.4"
 time = "0.1"
-nalgebra = "*"
+nalgebra = "0.14"
+ncollide = "*"
 rand = "*"
-geo = "*"
 petgraph = "*"
