Floormats working. Upgraded to new ncollide
(which fixed bug preventing floormats from working)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["Spencer Judge <sushisource@gmail.com>"]
 ggez = "0.4"
 time = "0.1"
 nalgebra = "0.14"
-ncollide = "0.14"
+ncollide2d = "0.15"
 rand = "*"
 derive-new = "0.5"
 num-derive = "0.2"
