--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "rustlike"
 version = "0.1.0"
 authors = ["Spencer Judge <sushisource@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 ggez = "0.4"
