--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 ggez = "0.5.0-rc.1"
 env_logger = "0.6"
+lazy_static = "1.3"
 log = "0.4"
 time = "0.1"
 nalgebra = "0.17"
