--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,18 +5,19 @@ authors = ["Spencer Judge <sushisource@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-ggez = "0.5.0-rc.2"
-env_logger = "0.6"
+bevy = "0.4"
+derive-new = "0.5"
+env_logger = "0.8"
 lazy_static = "1.3"
 log = "0.4"
-time = "0.1"
 nalgebra = "0.18"
 ncollide2d = "0.19"
-rand = "0.5"
-derive-new = "0.5"
-num-derive = "0.2"
+num = "0.3"
+num-derive = "0.3"
 num-traits = "0.2"
-num = "0.1"
+rand = "0.8"
+rand_distr = "0.4.0"
+time = "0.2"
 timebomb = "*"
 
 [workspace]
