--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ derive-new = "0.5"
 env_logger = "0.8"
 lazy_static = "1.3"
 log = "0.4"
+lyon = "0.16"
 nalgebra = "0.18"
 ncollide2d = "0.19"
 num = "0.3"
